roalframeworkincludedir = $(includedir)/RoalFramework

roalframeworkinclude_HEADERS = \
	ValueHandler.h \
	Genotype.h \
	Phenotype.h \
	LeggedCreaturePhenotype.h \
	Agent.h \
	Brain.h \
	FixedJoint.h \
	Util.h \
	BallJoint.h \
	VehicleSuspensionJoint.h \
	AngularMotorJoint.h \
	CubeSegment.h \
	Position.h \
	SphereSegment.h \
	WorldFrameListener.h \
	Body.h \
	HingeJoint.h \
	RoalCore.h \
	TriangleMeshSegment.h \
	World.h \
	DistributedWorld.h \
	Definitions.h \
	BodySegment.h \
	File.h \
	Joint.h \
	FixedJoint.h \
	MotorJoint.h \
	ImageRenderTarget.h \
	EyeSegment.h \
	IEffector.h \
	IListener.h \
	ISensor.h \
	IStandaloneSensor.h \
	NeighborDistanceSensor.h \
	KeySensor.h \
	Box.h \
	Cage.h \
	RoalException.h \
	UniversalJoint.h \
	Connector.h \
	ConnectorMessage.h \
	ConnectorMessageTokenizer.h \
	ConnectorServerMethod.h \
	Master.h \
	DistributedAgent.h \
	Slave.h \
	RoalDistributed.h \
	CreatureFactory.h \
	LeggedCreatureBrain.h \
	LeggedCreatureGenotype.h \
	LeggedCreatureFactory.h \
	WheeledCreatureFactory.h \
	WheeledCreatureGenotype.h \
	MovableText.h
