SUBDIRS = overlays textures fonts

EXTRA_DIST= \
	grass.jpg \
	tiled.png \
	clouds.jpg \
	terrain_detail.jpg \
	terrain.png \
	terrain_texture.jpg \
	marslow_bk.jpg \
	marslow_dn.jpg \
	marslow_fr.jpg \
	marslow_lf.jpg \
	marslow_rt.jpg \
	marslow_up.jpg \
	marshigh_bk.jpg \
	marshigh_dn.jpg \
	marshigh_fr.jpg \
	marshigh_lf.jpg \
	marshigh_rt.jpg \
	marshigh_up.jpg \
	desert_bk.jpg \
	desert_dn.jpg \
	desert_fr.jpg \
	desert_lf.jpg \
	desert_rt.jpg \
	desert_up.jpg \
	mountain_bk.jpg \
	mountain_dn.jpg \
	mountain_fr.jpg \
	mountain_lf.jpg \
	mountain_rt.jpg \
	mountain_up.jpg \
	landscape.material
