EXTRA_DIST=\
	jeep_wheel.jpg \
	jeep_wheell.material \
	Jeep_WheelL.mesh \
	jeep_wheelr.material \
	Jeep_WheelR.mesh \
	mat000.mesh \
	mat000.material \
	mat001.jpg \
	mat001.material \
	mat001.mesh \
	mat002.jpg \
	mat002.material \
	mat002.mesh \
	mat003.jpg \
	mat003.material \
	mat003.mesh \
	mat004.jpg \
	mat004.material \
	mat004.mesh \
	mat005.jpg \
	mat005.material \
	mat005.mesh \
	mat006.jpg \
	mat006.material \
	mat006.mesh \
	mat007.jpg \
	mat007.material \
	mat007.mesh \
	mat008.jpg \
	mat008.material \
	mat008.mesh \
	mat009.jpg \
	mat009.material \
	mat009.mesh \
	mat010.jpg \
	mat010.material \
	mat010.mesh \
	mat011.jpg \
	mat011.material \
	mat011.mesh \
	mat012.jpg \
	mat012.material \
	mat012.mesh \
	mat013.jpg \
	mat013.material \
	mat013.mesh \
	mat014.jpg \
	mat014.material \
	mat014.mesh \
	mat015.jpg \
	mat015.material \
	mat015.mesh \
	mat016.jpg \
	mat016.material \
	mat016.mesh \
	mat017.jpg \
	mat017.material \
	mat017.mesh \
	mat018.jpg \
	mat018.material \
	mat018.mesh \
	mat019.jpg \
	mat019.material \
	mat019.mesh \
	mat020.jpg \
	mat020.material \
	mat020.mesh \
	mat021.jpg \
	mat021.material \
	mat021.mesh \
	mat022.jpg \
	mat022.material \
	mat022.mesh \
	mat023.jpg \
	mat023.material \
	mat023.mesh \
	mat024.jpg \
	mat024.material \
	mat024.mesh \
	mat025.blend \
	mat025.jpg \
	mat025.material \
	mat025.mesh \
	mat026.blend \
	mat026.jpg \
	mat026.material \
	mat026.mesh \
	mat027.blend \
	mat027.jpg \
	mat027.material  \
	mat027.mesh \
	mat028.blend \
	mat028.jpg \
	mat028.material \
	mat028.mesh

