EXTRA_DIST= \
	roal.png \
	balljoint.jpg \
	balljoint.ps \
	hingejoint.jpg \
	hingejoint.ps \
	roal.png \
	universaljoint.jpg \
	universaljoint.ps \
	theme_desert.png \
	theme_desert.ps \
	theme_grass.png \
	theme_grass.ps \
	theme_lab.png \
	theme_lab.ps \
	theme_labsky.png \
	theme_labsky.ps \
	theme_mars.png \
	theme_mars.ps \
	theme_mountain.png \
	theme_mountain.ps \
	box.png \
	box.ps \
	cage.png \
	cage.ps \
	cubesegment.png \
	cubesegment.ps \
	wheeledcreature1.png \
	wheeledcreature1.ps \
	leggedcreature1.png \
	leggedcreaature1.ps \
	joint.png \
	joint.ps 
